--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -12,7 +12,7 @@
 
   <div class="item item-input-inset">
     <label class="item-input-wrapper">
-      <input type="text" ng-model='search.query'>
+      <input type="text" ng-model='search.query' placeholder="Search a Book">
     </label>
     <button class="button button-small" ng-click="doSomething(search)">
       Search
