--- a/www/templates/search-detail.html
+++ b/www/templates/search-detail.html
@@ -4,7 +4,7 @@
   The FriendsCtrl pulls data from the Friends service (service.js)
   The Friends service returns an array of friend data
 -->
-<ion-view>
+<ion-view view-title="Book Details">
   <ion-content class="padding">
  
   <div class="list card">
